--- a/index.html
+++ b/index.html
@@ -44,48 +44,78 @@
     </header>
     <main>
       <!--banner section-->
-      <div class=" items-center h-[550px] w-[1171px] mt-15" style="background-image: url(images/banner.png);">       
+      <div class="justify-center text-center items-center h-[550px] w-[1171px] mt-15" style="background-image: url(images/banner.png);">       
         <div class="hero-content text-center text-neutral-content justify-center">
           <div class="max-w-md justify-center text-center">
             <h1 class="mb-5 text-5xl font-bold">End-to-End Travel with <br> <span class="text-[#1DD100]">P Paribahan</span> </h1>
-            <p class="mb-5">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+            <p class="mb-5">Yes, you can run unit tests and view the results directly within the app. The integrated<br>testing features allow for a streamlined .</p>
             <button class="btn btn-primary bg-[#1DD100]">Buy Tickets</button>
           </div>
         </div>
       </div>
       <!--coupon section-->
-      <h1 class="text-3xl text-center mt-4">Best offers for you</h1>
-      <div class="items-center">
+      
+        <h1 class="text-3xl text-center mt-4">Best offers for you</h1>
+        <div class="items-center justify-center">
+      <div class="items-center justify-center">
         <div class="flex gap-5 pt-5">
           <div class="card w-96 bg-[#FFBF0F] text-primary-content">
             <div class="flex items-center">
               <div class="card-body">
-                <h2 class="card-title text-5xl text-bold">15%  OFF</h2>
-                <p>On your next purchase</p>
-                <p>use by January 2024</p>
+                <h2 class="card-title text-5xl text-bold text-black">15%  OFF</h2>
+                <p class="text-black">On your next purchase</p>
+                <p class="text-black">use by January 2024</p>
               </div>
               <div>
-                <h1>NEW 15</h1>
-                <h3>Coupon Code</h3>
+                <h1 class="text-black">NEW 15</h1>
+                <h3 class="text-black">Coupon Code</h3>
               </div>
             </div>
           </div>
           <div class="card w-96 bg-[#F78C9C] text-primary-content">
             <div class="flex items-center">
               <div class="card-body">
-                <h2 class="card-title text-5xl text-bold">20%  OFF</h2>
-                <p>On your next purchase</p>
-                <p>use by January 2024</p>
+                <h2 class="card-title text-5xl text-bold text-black">20%  OFF</h2>
+                <p class="text-black">On your next purchase</p>
+                <p class="text-black">use by January 2024</p>
               </div>
               <div>
-                <h1>NEW 15</h1>
-                <h3>Coupon Code</h3>
+                <h1 class="text-black">NEW 15</h1>
+                <h3 class="text-black">Coupon Code</h3>
   
             </div>
           </div>
         </div>
       </div>
-      <button class="btn btn-primary items-center justify-center">See all offers</button>
+      </div>
+      <div class="items-center justify-center text-center pt-5">
+        <button class="btn border">See All Offers</button>
+      </div>
+      
+      <!--ticketing section-->
+      <div class="text-center pt-5">
+        <h1 class="text-3xl bold">P.H Paribahan</h1>
+        <p>Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined </p>
+
+      </div>
+      <div class="pt-7">
+        <div class="flex gap-48 items-center justify-center text-center">
+          <div>
+            <div class="flex gap-x-20">
+              <div class="flex gap-2">
+                <img src="images/bus-logo.png" alt="">
+                <h2 class="text-">Greenline Paribahan <br>Coach-009-WEB | Economy</h2>
+              </div>
+              <button class="border flex h-[55] w-[180] bg-[#a7d1a1] rounded-md items-center"><img src="images/seat-green-filled.png" alt="">steat Left</button>
+            </div>
+          </div>
+          <div>
+            <img src="images/fare.png" alt="">
+            <h1>550 Taka</h1>
+            <h3>Per seat</h3>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
 
